cmake_minimum_required(VERSION 3.1)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
#set(CMAKE_CXX_EXTENSIONS OFF)

set(PREPPY_MAJOR_VERSION 0)
set(PREPPY_MINOR_VERSION 0)
set(PREPPY_PATCH_VERSION 4)

set(PREPPY_VERSION ${PREPPY_MAJOR_VERSION}.${PREPPY_MINOR_VERSION}.${PREPPY_PATCH_VERSION})

project(preppy CXX)

add_subdirectory(src)
